fixtures/syntax_errors/broken.py
import os


def broken_function(a, b
    return a + b


class Unclosed:
    def method(self):
        x = "unterminated string
        return x
